[package]
name = "backblaze_b2"
version = "0.1.0"
edition = "2024"
description = "A Rust library for interacting with Backblaze B2 Native API"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/backblaze_b2"
keywords = ["backblaze", "b2", "cloud", "storage", "api"]
categories = ["api-bindings", "cloud"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
thiserror = "2.0.11"
sha1 = "0.10"

[dev-dependencies]
wiremock = "0.6"
